# sddf-serial

./: README.md
serial/: CMakeLists.txt  Makefile  serial.system
serial/include/: serial_client.h  serial_driver.h  shared_dma.h
serial/src/: serial_client.c  serial_driver.c
serial_test/unit/: CMakeLists.txt  test_serial_client.cpp
